# Proxy-Opensearch-MCP

./: .gitignore  README.md  config.example.json  interactive_client.py  pyproject.toml  streamlit_app.py  web_server.py
proxy_mcp/: masking.py  mcp_client.py  server.py
