[project]
name = "proxy-opensearch-mcp"
version = "0.1.0"
description = "A proxy MCP server for OpenSearch with masking capabilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "opensearch-py",
    "presidio-analyzer",
    "spacy"
]

[project.scripts]
proxy-opensearch = "proxy_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
